fix layout on Firefox

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -33,8 +33,10 @@ main {
   padding-bottom: 4em;
   top: 94px;
   position: absolute;
+  width: 100%;
   @media (min-width: 768px) {
     left: 250px;
     top: 0;
+    width: calc(100% - 250px);
   }
 }
